feat: add exception result, improve output sanitation